2004-04-23  Dan Winship  <danw@ximian.com>

	* xntlm.c (xntlm_negotiate): Redo the doc comment to make gtk-doc
	happy

2003-11-13  Dan Winship  <danw@ximian.com>

	* xntlm-des.c: ANSIfy prototypes for gtk-doc

2003-10-07  Dan Winship  <danw@ximian.com>

	* xntlm.c (ntlm_lanmanager_hash): fix a gcc 3.3 warning

2003-04-08  Dan Winship  <danw@ximian.com>

	* xntlm.c (setup_schedule): Fix to not read uninitialized memory
	to make valgrind/purify happy

2003-04-04  Dan Winship  <danw@ximian.com>

	* xntlm-des.h: add XNTLM_DES_ENCRYPT and XNTLM_DES_DECRYPT defines.

	* xntlm-des.c (xntlm_deskey): make the key arg const.

	* xntlm.c (setup_schedule): s/0/XNTLM_DES_ENCRYPT/

2003-03-19  Dan Winship  <danw@ximian.com>

	* Makefile.am: Make this a static library

2003-02-26  Dan Winship  <danw@ximian.com>

	* xntlm.c (strip_dup): Fix a bug

2003-02-21  Dan Winship  <danw@ximian.com>

	* xntlm.c, xntlm-des.c, xntlm-md4.c: #include config.h

2002-08-05  Dan Winship  <danw@ximian.com>

	* Split this code out of camel/soup and tidy it up
